--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,11 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+        layout="@layout/toolbar" />
 
-    <android.support.design.widget.TabLayout
+    <include
         android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        layout="@layout/tab_bar" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
