--- a/app/src/main/res/layout/tab_bar.xml
+++ b/app/src/main/res/layout/tab_bar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<android.support.design.widget.TabLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar"
+    android:id="@+id/tabs"
     app:theme="@style/ToolbarTheme"
-    app:titleTextAppearance="@style/ToolbarTitleText"
+    app:tabTextAppearance="@style/TabTitleText"
+    app:tabMode="scrollable"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
- />
+    android:layout_height="wrap_content" />
