--- a/app/src/main/res/layout/diary_tab.xml
+++ b/app/src/main/res/layout/diary_tab.xml
@@ -5,11 +5,21 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/diary_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/coming_soon_text"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="bottom|end"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_create_black_24dp"
+        android:tint="@color/colorAccent"
+        android:backgroundTint="@color/colorPrimaryDark" />
 
 </RelativeLayout>
