--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- Dimensions for CardViews. -->
+    <dimen name="cardview_horizontal_margin">8dp</dimen>
+    <dimen name="cardview_vertical_margin">4dp</dimen>
+    <dimen name="cardview_top_padding">8dp</dimen>
+    <dimen name="cardview_internal_padding">16dp</dimen>
+    <dimen name="cardview_min_height">72dp</dimen>
 </resources>
