--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00695C</color>
     <color name="colorAccent">#18FFFF</color>
+
+    <color name="lightText">#9e9e9e</color>
+    <color name="mainText">#000000</color>
+
 </resources>
