--- a/app/src/main/res/layout/listen_tab.xml
+++ b/app/src/main/res/layout/listen_tab.xml
@@ -36,6 +36,15 @@
             android:tint="@color/colorAccent"
             android:backgroundTint="@color/colorPrimaryDark"/>
 
+        <ImageButton
+            android:id="@+id/loop_button"
+            android:contentDescription="@string/loop_button_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_loop_black_24dp"
+            android:tint="@color/colorAccent"
+            android:backgroundTint="@color/colorPrimaryDark"/>
+
     </LinearLayout>
 
 </RelativeLayout>
