--- a/app/src/main/res/layout/fragment_adddiaryentry.xml
+++ b/app/src/main/res/layout/fragment_adddiaryentry.xml
@@ -16,8 +16,7 @@
         <Button android:id="@+id/adddiaryentry_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/diary_entry_save_button"
-            android:onClick="saveDiaryEntry"/>
+            android:text="@string/diary_entry_save_button" />
 
     </LinearLayout>
 </ScrollView>
