--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/tabs"
         layout="@layout/tab_bar" />
 
-    <android.support.v4.view.ViewPager
+    <com.hedgehogproductions.therapyguide.SmartSwipePager
         android:id="@+id/pager"
         android:layout_height="0dp"
         android:layout_width="match_parent"
