--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="cardview_top_padding">8dp</dimen>
     <dimen name="cardview_internal_padding">16dp</dimen>
     <dimen name="cardview_min_height">72dp</dimen>
+
+    <dimen name="intro_dots_height">48dp</dimen>
 </resources>
