Add Introduction to the menu so it can be viewed when desired.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,9 @@
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/show_intro"
+        android:icon="@drawable/ic_introduction_black_24dp"
+        android:title="@string/show_intro"
+        app:showAsAction="never" />
 </menu>
