--- a/app/src/main/res/layout/intro_kindness.xml
+++ b/app/src/main/res/layout/intro_kindness.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <ImageView
-        android:id="@+id/kindness_image"
+    android:layout_height="match_parent" >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/intro_kindness_image_description"
-        android:src="@mipmap/ic_sleep" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/intro_kindness_background" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/intro_kindness_text"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-</LinearLayout>
+        <ImageView
+            android:id="@+id/kindness_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/intro_kindness_image_description"
+            android:src="@mipmap/ic_sleep"
+            android:paddingBottom="@dimen/intro_text_padding_bottom" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_kindness_title"
+            android:theme="@style/IntroTitleText" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_kindness_text"
+            android:theme="@style/IntroText" />
+
+    </LinearLayout>
+</ScrollView>
