--- a/app/src/main/res/layout/intro_positivity.xml
+++ b/app/src/main/res/layout/intro_positivity.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/intro_positivity_background" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/intro_positivity_background" >
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/positivity_image"
