--- a/app/src/main/res/layout/intro_intro.xml
+++ b/app/src/main/res/layout/intro_intro.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/intro_intro_background" >
+    android:paddingBottom="@dimen/intro_dots_height"
+    android:background="@color/intro_intro_background"
+    tools:ignore="Overdraw">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/intro_text_padding_bottom" />
 
         <ImageView
             android:id="@+id/intro_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/intro_image_height"
             android:contentDescription="@string/intro_intro_image_description"
-            android:src="@mipmap/ic_sleep"
-            android:paddingBottom="@dimen/intro_text_padding_bottom" />
+            app:srcCompat="@drawable/ic_lighthouse_white_24dp"
+            android:scaleType="fitCenter" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/intro_text_padding_bottom" />
 
         <TextView
             android:layout_width="match_parent"
