--- a/app/src/main/res/layout/diary_tab.xml
+++ b/app/src/main/res/layout/diary_tab.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/diary_view"
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_create_black_24dp"
+        app:srcCompat="@drawable/ic_create_black_24dp"
         android:tint="@color/colorAccent"
         android:backgroundTint="@color/colorPrimaryDark"
         app:backgroundTint="@color/colorPrimaryDark"
