--- a/app/src/main/res/layout/intro_positivity.xml
+++ b/app/src/main/res/layout/intro_positivity.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/intro_positivity_background" >
+    android:paddingBottom="@dimen/intro_dots_height"
+    android:background="@color/intro_positivity_background"
+    tools:ignore="Overdraw">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/intro_text_padding_bottom" />
 
         <ImageView
             android:id="@+id/positivity_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/intro_image_height"
             android:contentDescription="@string/intro_positivity_image_description"
-            android:src="@mipmap/ic_sleep"
-            android:paddingBottom="@dimen/intro_text_padding_bottom" />
+            app:srcCompat="@drawable/ic_positivity"
+            android:scaleType="fitCenter" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/intro_text_padding_bottom" />
 
         <TextView
             android:layout_width="match_parent"
@@ -52,28 +64,59 @@
             android:text="@string/intro_positivity_text5"
             android:theme="@style/IntroText" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/cardview_top_padding"
+            android:clipToPadding="false">
+            <Button
+                android:id="@+id/intro_set_reminder_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@color/intro_positivity_background"
+                android:textColor="@android:color/white"
+                android:elevation="@dimen/intro_button_elevation"
+                android:text="@string/intro_set_reminder_button_text"
+                android:paddingLeft="@dimen/intro_button_padding"
+                android:paddingStart="@dimen/intro_button_padding"
+                android:paddingRight="@dimen/intro_button_padding"
+                android:paddingEnd="@dimen/intro_button_padding"/>
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/intro_text_padding_bottom" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/intro_positivity_text6"
-            android:theme="@style/IntroBullets" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/intro_positivity_text7"
-            android:theme="@style/IntroSubheading" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/intro_positivity_text8"
             android:theme="@style/IntroText" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/intro_positivity_text7"
+            android:theme="@style/IntroBullets" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_positivity_text8"
+            android:theme="@style/IntroSubheading" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/intro_positivity_text9"
+            android:theme="@style/IntroText" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/intro_positivity_text10"
             android:theme="@style/IntroBullets" />
 
     </LinearLayout>
