--- a/app/src/main/res/layout/listen_tab.xml
+++ b/app/src/main/res/layout/listen_tab.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +14,7 @@
             android:contentDescription="@string/restart_button_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_skip_previous_black_24dp"
+            app:srcCompat="@drawable/ic_skip_previous_black_24dp"
             android:tint="@color/colorAccent"
             android:backgroundTint="@color/colorPrimaryDark" />
 
@@ -23,7 +23,7 @@
             android:contentDescription="@string/play_button_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_play_arrow_black_24dp"
+            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
             android:tint="@color/colorAccent"
             android:backgroundTint="@color/colorPrimaryDark"/>
 
@@ -32,7 +32,7 @@
             android:contentDescription="@string/stop_button_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_stop_black_24dp"
+            app:srcCompat="@drawable/ic_stop_black_24dp"
             android:tint="@color/colorAccent"
             android:backgroundTint="@color/colorPrimaryDark"/>
 
@@ -41,7 +41,7 @@
             android:contentDescription="@string/loop_button_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_loop_black_24dp"
+            app:srcCompat="@drawable/ic_loop_black_24dp"
             android:tint="@color/colorAccent"
             android:backgroundTint="@color/colorPrimaryDark"/>
 
