--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
-
     <dimen name="intro_padding_side">192dp</dimen>
     <dimen name="intro_bullets_padding_side">240dp</dimen>
+    <dimen name="intro_image_height">240dp</dimen>
+    <dimen name="intro_text_size">20sp</dimen>
+    <dimen name="intro_title_size">26sp</dimen>
 </resources>
