--- a/app/src/main/res/layout/tab_bar.xml
+++ b/app/src/main/res/layout/tab_bar.xml
@@ -2,10 +2,12 @@
 <android.support.design.widget.TabLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tabs"
     android:theme="@style/ToolbarTheme"
     app:tabTextAppearance="@style/TabTitleText"
     app:tabMode="scrollable"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="4dp"/>
+    android:elevation="4dp"
+    tools:ignore="UnusedAttribute" />
