--- a/app/src/main/res/layout/diary_card.xml
+++ b/app/src/main/res/layout/diary_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
@@ -18,7 +19,8 @@
         android:minHeight="@dimen/cardview_min_height"
         android:elevation="@dimen/cardview_default_elevation"
         card_view:cardCornerRadius="@dimen/cardview_default_radius"
-        card_view:contentPadding="@dimen/cardview_internal_padding">
+        card_view:contentPadding="@dimen/cardview_internal_padding"
+        tools:ignore="UnusedAttribute">
 
         <RelativeLayout
             android:layout_width="match_parent"
