--- a/app/src/main/res/layout/diary_tab.xml
+++ b/app/src/main/res/layout/diary_tab.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,6 +28,7 @@
         android:tint="@color/colorAccent"
         android:backgroundTint="@color/colorPrimaryDark"
         app:backgroundTint="@color/colorPrimaryDark"
-        app:borderWidth="0dp" />
+        app:borderWidth="0dp"
+        tools:ignore="UnusedAttribute" />
 
 </RelativeLayout>
