--- a/app/src/main/res/layout/listen_tab.xml
+++ b/app/src/main/res/layout/listen_tab.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,7 +17,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_skip_previous_black_24dp"
             android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark" />
+            android:backgroundTint="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute" />
 
         <ImageButton
             android:id="@+id/play_button"
@@ -25,7 +27,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_play_arrow_black_24dp"
             android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"/>
+            android:backgroundTint="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute" />
 
         <ImageButton
             android:id="@+id/stop_button"
@@ -34,7 +37,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_stop_black_24dp"
             android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"/>
+            android:backgroundTint="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute" />
 
         <ImageButton
             android:id="@+id/loop_button"
@@ -43,7 +47,8 @@
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_loop_black_24dp"
             android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"/>
+            android:backgroundTint="@color/colorPrimaryDark"
+            tools:ignore="UnusedAttribute" />
 
     </LinearLayout>
 
