--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,10 +2,11 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:theme="@style/ToolbarTheme"
     app:titleTextAppearance="@style/ToolbarTitleText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="4dp"
- />
+    tools:ignore="UnusedAttribute" />
