--- a/app/src/main/res/layout/fragment_editdiaryentry.xml
+++ b/app/src/main/res/layout/fragment_editdiaryentry.xml
@@ -12,23 +12,28 @@
         <EditText android:id="@+id/editdiaryentry_entry_text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message" />
+            android:hint="@string/diary_create_message"
+            android:inputType="textCapSentences"/>
         <EditText android:id="@+id/editdiaryentry_entry_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement" />
+            android:hint="@string/diary_create_message_supplement"
+            android:inputType="textCapSentences"/>
         <EditText android:id="@+id/editdiaryentry_entry_text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement" />
+            android:hint="@string/diary_create_message_supplement"
+            android:inputType="textCapSentences"/>
         <EditText android:id="@+id/editdiaryentry_entry_text4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement" />
+            android:hint="@string/diary_create_message_supplement"
+            android:inputType="textCapSentences"/>
         <EditText android:id="@+id/editdiaryentry_entry_text5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement" />
+            android:hint="@string/diary_create_message_supplement"
+            android:inputType="textCapSentences"/>
 
         <LinearLayout
             android:layout_width="match_parent"
