--- a/app/src/main/res/layout/fragment_editkindnessentry.xml
+++ b/app/src/main/res/layout/fragment_editkindnessentry.xml
@@ -9,48 +9,62 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText android:id="@+id/editdiaryentry_entry_text1"
+        <TextView android:id="@+id/editkindnessentry_words_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message"
-            android:inputType="textCapSentences"/>
-        <EditText android:id="@+id/editdiaryentry_entry_text2"
+            android:hint="@string/kindness_create_words_message" />
+
+        <Spinner
+            android:id="@+id/editkindnessentry_words_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView android:id="@+id/editkindnessentry_thoughts_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement"
-            android:inputType="textCapSentences"/>
-        <EditText android:id="@+id/editdiaryentry_entry_text3"
+            android:hint="@string/kindness_create_thoughts_message" />
+
+        <Spinner
+            android:id="@+id/editkindnessentry_thoughts_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView android:id="@+id/editkindnessentry_actions_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement"
-            android:inputType="textCapSentences"/>
-        <EditText android:id="@+id/editdiaryentry_entry_text4"
+            android:hint="@string/kindness_create_actions_message" />
+
+        <Spinner
+            android:id="@+id/editkindnessentry_actions_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView android:id="@+id/editkindnessentry_self_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement"
-            android:inputType="textCapSentences"/>
-        <EditText android:id="@+id/editdiaryentry_entry_text5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/diary_create_message_supplement"
-            android:inputType="textCapSentences"/>
+            android:hint="@string/kindness_create_self_message" />
+
+        <Spinner
+            android:id="@+id/editkindnessentry_self_spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             style="?android:attr/buttonBarStyle"            >
-            <Button android:id="@+id/editdiaryentry_cancel_button"
+            <Button android:id="@+id/editkindnessentry_cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/entry_cancel_button" />
-            <Button android:id="@+id/editdiaryentry_save_button"
+            <Button android:id="@+id/editkindnessentry_save_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/entry_save_button" />
-            <Button android:id="@+id/editdiaryentry_delete_button"
+            <Button android:id="@+id/editkindnessentry_delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/buttonBarButtonStyle"
