--- a/app/src/main/res/layout/tab_bar.xml
+++ b/app/src/main/res/layout/tab_bar.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tabs"
-    android:theme="@style/ToolbarTheme"
     app:tabTextAppearance="@style/TabTitleText"
     app:tabMode="scrollable"
+    app:tabGravity="fill"
+    app:tabMaxWidth="0dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="4dp"
