--- a/app/src/main/res/layout/intro_intro.xml
+++ b/app/src/main/res/layout/intro_intro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/intro_dots_height"
-    android:background="@color/intro_intro_background"
+    android:background="@color/colourIntro"
     tools:ignore="Overdraw">
     <LinearLayout
         android:layout_width="match_parent"
