--- a/app/src/main/res/layout/kindness_tab.xml
+++ b/app/src/main/res/layout/kindness_tab.xml
@@ -25,9 +25,9 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_create_black_24dp"
-        android:tint="@color/colorAccent"
-        android:backgroundTint="@color/colorPrimaryDark"
-        app:backgroundTint="@color/colorPrimaryDark"
+        android:tint="@color/colourKindnessAccent"
+        android:backgroundTint="@color/colourKindnessDark"
+        app:backgroundTint="@color/colourKindnessDark"
         app:borderWidth="0dp"
         tools:ignore="UnusedAttribute" />
 
