--- a/app/src/main/res/layout/listen_tab.xml
+++ b/app/src/main/res/layout/listen_tab.xml
@@ -16,8 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_skip_previous_black_24dp"
-            android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:tint="@color/colourSleepAccent"
+            android:backgroundTint="@color/colourSleepDark"
             tools:ignore="UnusedAttribute" />
 
         <ImageButton
@@ -26,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_play_arrow_black_24dp"
-            android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:tint="@color/colourSleepAccent"
+            android:backgroundTint="@color/colourSleepDark"
             tools:ignore="UnusedAttribute" />
 
         <ImageButton
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_stop_black_24dp"
-            android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:tint="@color/colourSleepAccent"
+            android:backgroundTint="@color/colourSleepDark"
             tools:ignore="UnusedAttribute" />
 
         <ImageButton
@@ -46,8 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/ic_loop_black_24dp"
-            android:tint="@color/colorAccent"
-            android:backgroundTint="@color/colorPrimaryDark"
+            android:tint="@color/colourSleepAccent"
+            android:backgroundTint="@color/colourSleepDark"
             tools:ignore="UnusedAttribute" />
 
     </LinearLayout>
