--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00695C</color>
-    <color name="colorAccent">#18FFFF</color>
+    <color name="colorPrimaryDark">#00675b</color>
+    <color name="colorPrimaryAccent">#52c7b8</color>
 
     <color name="lightText">#9e9e9e</color>
     <color name="mainText">#000000</color>
 
-    <color name="completeKindness">#4caf50</color>
-    <color name="incompleteKindness">#FFE082</color>
+    <color name="colourIntro">#20d2bb</color>
+    <color name="colourIntroAccent">#8cf9eb</color>
+    <color name="colourIntroDark">#14a895</color>
 
-    <!-- Colours for intro screens -->
-    <color name="intro_intro_background">#f64c73</color>
-    <color name="intro_sleep_background">#20d2bb</color>
-    <color name="intro_positivity_background">#3395ff</color>
-    <color name="intro_kindness_background">#c873f4</color>
-    <color name="intro_intro_dot_active">#f98da5</color>
-    <color name="intro_sleep_dot_active">#8cf9eb</color>
-    <color name="intro_positivity_dot_active">#93c6fd</color>
-    <color name="intro_kindness_dot_active">#e4b5fc</color>
-    <color name="intro_intro_dot_inactive">#d1395c</color>
-    <color name="intro_sleep_dot_inactive">#14a895</color>
-    <color name="intro_positivity_dot_inactive">#2278d4</color>
-    <color name="intro_kindness_dot_inactive">#a854d4</color>
+    <color name="colourSleep">#f64c73</color>
+    <color name="colourSleepAccent">#f98da5</color>
+    <color name="colourSleepDark">#d1395c</color>
+
+    <color name="colourPositivity">#3395ff</color>
+    <color name="colourPositivityAccent">#93c6fd</color>
+    <color name="colourPositivityDark">#2278d4</color>
+    <color name="diaryEntry">@color/colourPositivityAccent</color>
+
+    <color name="colourKindness">#c873f4</color>
+    <color name="colourKindnessAccent">#e4b5fc</color>
+    <color name="colourKindnessDark">#a854d4</color>
+    <color name="completeKindness">@color/colourKindness</color>
+    <color name="incompleteKindness">@color/colourKindnessAccent</color>
+
 
     <array name="intro_active_dots">
-        <item>@color/intro_intro_dot_active</item>
-        <item>@color/intro_sleep_dot_active</item>
-        <item>@color/intro_positivity_dot_active</item>
-        <item>@color/intro_kindness_dot_active</item>
+        <item>@color/colourIntroAccent</item>
+        <item>@color/colourSleepAccent</item>
+        <item>@color/colourPositivityAccent</item>
+        <item>@color/colourKindnessAccent</item>
     </array>
     <array name="intro_inactive_dots">
-        <item>@color/intro_intro_dot_inactive</item>
-        <item>@color/intro_sleep_dot_inactive</item>
-        <item>@color/intro_positivity_dot_inactive</item>
-        <item>@color/intro_kindness_dot_inactive</item>
+        <item>@color/colourIntroDark</item>
+        <item>@color/colourSleepDark</item>
+        <item>@color/colourPositivityDark</item>
+        <item>@color/colourKindnessDark</item>
     </array>
 
 </resources>
